# ResearchScout

./: README.md  app.py  cli.py  pyproject.toml
get_papers/: fetch.py  filter.py  types.py  utils.py
